# deepnova

./: .editorconfig  .gitattributes  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
include/: CMakeLists.txt
include/deep/: CMakeLists.txt  deepinfo.h  deepnova.h
include/deep/core/: CMakeLists.txt  core.h  handler.h  monitor.h
include/deep/event/: CMakeLists.txt  event.h  event_data.h  event_queue.h  event_queue_struct.h  instance.h  monitor.h
include/deep/grafic/: CMakeLists.txt  grafic.h  grafic_data.h  renderer_struct.h  window.h  window_struct.h
include/deep/instance/: CMakeLists.txt  error.h  instance.h  surface.h
include/deep/surface/: CMakeLists.txt  instance.h  instance_struct.h  surface.h
source/: CMakeLists.txt  deep_library.h
source/core/: CMakeLists.txt  core_module.h  handler.c  handler_helper.c  handler_helper.h  singleton.c  singleton.h
source/event/: CMakeLists.txt  event_module.h  event_queue.c
source/grafic/: CMakeLists.txt  grafic_module.h  renderer.c  window.c  window_callback.c  window_callback.h  window_helper.c  window_helper.h
source/instance/: CMakeLists.txt  singleton.c  singleton.h  surface.c  surface_helper.c  surface_helper.h
source/surface/: CMakeLists.txt  instance.c  instance_module.h  surface.c  surface_helper.c  surface_helper.h  surface_module.h
test/: CMakeLists.txt
test/core/: .core_test.c.kate-swp  core_test.c
test/instance/: CMakeLists.txt  core_test.c  instance_test.c
test/surface/: CMakeLists.txt  instance_test.c
